--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="scope-and-limitations" class="level3" data-number="1.0.3">
 <h3 data-number="1.0.3" class="anchored" data-anchor-id="scope-and-limitations"><span class="header-section-number">1.0.3</span> Scope and limitations</h3>
-<p>The guide is focused on tools (and methods) related to searching for and screening literature that use artificial intelligence. The guide is limited to tools that are or can be used in evidence synthesis across the difference stages of a review (primarily search, screening, data extraction and risk of bias assessment).</p>
+<p>The guide is focused on tools (and methods) that use artificial intelligence related to searching for and screening literature. The guide is limited to tools that are or can be used in evidence synthesis across the different stages of a review (primarily search, screening, data extraction and risk of bias assessment).</p>
 <p>Medicine and health are far advanced in terms of standardised reporting when compared to ecology. Many tools are designed for medical or health applications (that is where the money is!). We will mention tools in this field but will highlight where we see potential issues or risks for studies typical of ecology.</p>
 <div class="callout callout-style-simple callout-note">
 <div class="callout-body d-flex">
@@ -196,7 +196,7 @@ ul.task-list li input[type="checkbox"] {
 <p><em>Automation Tools</em></p>
 <p>Automation tools are software applications that streamline or perform parts of the evidence synthesis process, sometimes with the support of AI or rule-based algorithms. Examples include machine learning tools for screening (e.g., ASReview), tools for deduplication (e.g., revtools), and citation managers with AI-enhanced features (e.g., Rayyan).</p>
 <p><em>Systematic Reviews</em></p>
-<p>Systematic reviews are rigorous, transparent, and reproducible syntheses of research evidence, guided by a predefined protocol. They aim to minimise bias by using systematic methods for literature searching, screening, data extraction, and analysis. Systematic reviews are often used to inform policy, management, and research priorities. Systematic review may contain a meta-analysis - the statistical method of combining effects from different studies</p>
+<p>Systematic reviews are rigorous, transparent, and reproducible syntheses of research evidence, guided by a predefined protocol. They aim to minimise bias by using systematic methods for literature searching, screening, data extraction, and analysis. Systematic reviews are often used to inform policy, management, and research priorities. Systematic reviews may contain a meta-analysis - the statistical method of combining effects from different studies.</p>
 <p><em>Evidence Maps (Systematic Maps)</em></p>
 <p>Systematic maps aim to provide an overview of the available evidence on a broad topic. Unlike systematic reviews, they do not usually attempt to answer a narrow causal question but instead catalogue, categorise, and describe studies. They are particularly useful for identifying knowledge gaps and clusters.</p>
 <p><em>Scoping Reviews</em></p>
@@ -406,7 +406,7 @@ ul.task-list li input[type="checkbox"] {
 <p>AI models learn from data, and if that data contains bias, the models may reinforce it. This is particularly important in:</p>
 <ul>
 <li><p><strong>Screening decisions</strong>: AI models trained on early decisions may exclude relevant but atypical studies.</p></li>
-<li><p><strong>Literature searches</strong>: Semantic search or LLM tools may prioritize well-published, Western, or English-language research, marginalizing underrepresented voices or gray literature.</p></li>
+<li><p><strong>Literature searches</strong>: Semantic search or LLM tools may prioritize well-published, Western, or English-language research, marginalizing under-represented voices or grey literature. The search results may be limited by the coverage of the database on which the tool was developed.</p></li>
 <li><p><strong>Data extraction</strong>: If models are trained on specific study types (e.g.&nbsp;medical trials), they may misinterpret ecological studies.</p></li>
 </ul>
 <p>To mitigate these risks:</p>
@@ -615,7 +615,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="bias-and-fairness" class="level3" data-number="7.2.5">
 <h3 data-number="7.2.5" class="anchored" data-anchor-id="bias-and-fairness"><span class="header-section-number">7.2.5</span> <strong>Bias and Fairness</strong></h3>
 <ul>
-<li>Does the tool show systematic bias (e.g., against gray literature or non-English studies)?</li>
+<li>Does the tool show systematic bias (e.g., against grey literature or non-English studies)?</li>
 <li>Was the training data diverse?</li>
 <li>Have you reviewed outputs for under-representation of certain sources?</li>
 </ul>
