Update slides and tidy repo

--- a/slides.html
+++ b/slides.html
@@ -263,9 +263,9 @@ Matt Grainger
 </section>
 <section id="help-wanted" class="slide level2">
 <h2>Help wanted!</h2>
+<p>We need better benchmarks: How long do review tasks really take in ecology? Without this, we cannot fairly assess claims that AI tools save time or increase efficiency.</p>
 
-<img data-src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTgzd2p6aGY0eHdwNHo1Z3c3cXoxcW03am4zaWoyMjY3M29yNm1rbiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9dg/MjhGi9u6UJlU873Ml4/giphy.gif" class="r-stretch"><p>We need better benchmarks: How long do review tasks really take in ecology? Without this, we cannot fairly assess claims that AI tools save time or increase efficiency.</p>
-</section>
+<img data-src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTgzd2p6aGY0eHdwNHo1Z3c3cXoxcW03am4zaWoyMjY3M29yNm1rbiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9dg/MjhGi9u6UJlU873Ml4/giphy.gif" class="r-stretch"></section>
 <section id="section-3" class="slide level2">
 <h2></h2>
 <blockquote>
