--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@ ul.task-list li input[type="checkbox"] {
 <li><p>1.1, 1.2 — minor updates (typos, clarifications)</p></li>
 <li><p>2.0 — major update, possible structural changes or new content</p></li>
 </ul>
+<p>You can add comments and make suggestions <a href="https://github.com/NINAnor/AI_review_guide/discussions/1">here</a></p>
 </section>
 <section id="who-this-guide-is-for" class="level3" data-number="1.0.2">
 <h3 data-number="1.0.2" class="anchored" data-anchor-id="who-this-guide-is-for"><span class="header-section-number">1.0.2</span> Who this guide is for</h3>
